# Studium

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  validate.py
alembic/: env.py
alembic/versions/: 202502110000_create_sources_table.py
app/: __init__.py  auth.py  celery_worker.py  config.py  database.py  main.py
app/eval/: __init__.py
app/ingestion/: __init__.py  models.py  routes.py  schemas.py
app/mastery/: __init__.py
app/quiz/: __init__.py
app/retrieval/: __init__.py
app/tutor/: __init__.py
docs/: prd.md
tests/: test_api.py
web/: next.config.mjs  package.json  tsconfig.json
web/app/: globals.css  layout.tsx
web/app/sources/: page.tsx
web/app/sources/[id]/: page.tsx
web/app/sources/new/: page.tsx
web/types/: sources.ts
